[tool.poetry]
name = "orgpedia-mahmls"
version = "0.0.1"
description = "Datapackage containing orders of Maharashtra Legislature Government of Maharashtra."
authors = ["Orgpedia Foundation <orgpedia.foundation@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["information extraction", "data package", "government data"]
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Scientific/Engineering :: Visualization',
    'Topic :: Scientific/Engineering :: Image Processing',
    'Topic :: Scientific/Engineering :: Image Recognition',
]

packages = [ { include = "orgpedia_mahmls", from = "export" } ]
include = [ "export/orgpedia_mahmls/*" ]

[tool.poetry.urls]
"homepage" = "https://www.orgpedia.in/"
"repository" = "https://github.com/orgpedia/mahmls"
"data issues" = "https://github.com/orgpedia/mahmls/discussions"

[tool.poetry.dependencies]
python = "!=3.7.6,!=3.8.1,>3.7.1"

# this is a datapackage should not have any dependency as we are publishing data
# dependencies for running the flow are in group.dev.dependencies
pysbd = "^0.3.4"
sentencepiece = "^0.1.99"
indic-nlp-library = {git = "https://github.com/orgpedia/indic_nlp_library-deva.git"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
#docint = { git = "https://github.com/mukundesh/docint.git" }
#orgpedia = { git = "https://github.com/orgpedia/orgpedia.git" }

google-cloud-storage = "^2.9.0"
google-cloud-vision = "^3.4.2"
google-cloud-translate = "^2.0.1"
pdfplumber = "^0.9.0"


black = "^22.6.0"
ruff = "^0.0.243"
#pre-commit = "^2.21.0" # version compatible with 3.7


[tool.poetry.group.translate]
optional = true

[tool.poetry.group.translate.dependencies]
docint = { git = "https://github.com/mukundesh/docint.git" }

indic-nlp-library = {git = "https://github.com/orgpedia/indic_nlp_library-deva.git"}
ctranslate2 = "3.9.0"
sentencepiece = "^0.1.99"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.yml
  | \.json
  | \.txt
  | \.bak
  | makefile
  | _build
  | buck-out
  | build
  | dist
  | input
  | output
  | logs
  | conf
  | models
  | export
  | documents
)/
'''

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W", "I001"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["I001"] # fix only isort issues
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    "__pypackages__",
    "dist",
    "node_modules",
    "venv",
    ".bak",
    "input",
    "output",
    "logs",
    "conf",
    "export",
    "models",
    "documents",
    "data_packages",
    "websites",
    "page_images",
    "html",
]
per-file-ignores = {}

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
#dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.7
target-version = "py37"
