[project]
name = "orgpedia-mahmls"
version = "0.0.1"
description = "Datapackage containing orders of Maharashtra Legislature Government of Maharashtra."
authors = [{ name = "Orgpedia Foundation", email = "orgpedia.foundation@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "information extraction",
    "data package",
    "government data",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "pysbd>=0.3.4,<0.4",
    "sentencepiece>=0.1.99,<0.2",
    "indic-nlp-library",
    "pyyaml>=6.0.2",
]

[project.urls]
homepage = "https://www.orgpedia.in/"
repository = "https://github.com/orgpedia/mahmls"
"data issues" = "https://github.com/orgpedia/mahmls/discussions"

[dependency-groups]
dev = [
    "google-cloud-storage>=2.9.0,<3",
    "google-cloud-vision>=3.4.2,<4",
    "google-cloud-translate>=2.0.1,<3",
    "pdfplumber>=0.9.0,<0.10",
    "black>=22.6.0,<23",
    "ruff>=0.0.243,<0.0.244",
]
translate = [
    "docint",
    "indic-nlp-library",
    "ctranslate2==3.9.0",
    "sentencepiece>=0.1.99,<0.2",
]

[tool.uv]
default-groups = [
    "dev",
    "translate",
]

[tool.uv.sources]
docint = { git = "https://github.com/mukundesh/docint.git" }
indic-nlp-library = { git = "https://github.com/orgpedia/indic_nlp_library-deva.git" }

[tool.hatch.build.targets.sdist]
include = [
    "export/orgpedia_mahmls",
    "export/orgpedia_mahmls/*",
]

[tool.hatch.build.targets.wheel]
include = [
    "export/orgpedia_mahmls",
    "export/orgpedia_mahmls/*",
]

[tool.hatch.build.targets.wheel.sources]
"export/orgpedia_mahmls" = "orgpedia_mahmls"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.yml
  | \.json
  | \.txt
  | \.bak
  | makefile
  | _build
  | buck-out
  | build
  | dist
  | input
  | output
  | logs
  | conf
  | models
  | export
  | documents
)/
'''

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W", "I001"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["I001"] # fix only isort issues
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    "__pypackages__",
    "dist",
    "node_modules",
    "venv",
    ".bak",
    "input",
    "output",
    "logs",
    "conf",
    "export",
    "models",
    "documents",
    "data_packages",
    "websites",
    "page_images",
    "html",
]
per-file-ignores = {}

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
#dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.7
target-version = "py37"
